stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Get':
CircularBuffer.c:47:6: error: unused variable 'value' [-Werror=unused-variable]
   47 |  int value=self->output_index;
      |      ^~~~~
compilation terminated due to -Wfatal-errors.
cc1: all warnings being treated as errors
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
